Bug 109742 - CSSPreloadScanner should not depend on HTMLToken
Summary: CSSPreloadScanner should not depend on HTMLToken
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 106127
  Show dependency treegraph
 
Reported: 2013-02-13 13:21 PST by Adam Barth
Modified: 2013-02-13 14:42 PST (History)
4 users (show)

See Also:


Attachments
Patch (4.76 KB, patch)
2013-02-13 13:23 PST, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2013-02-13 13:21:47 PST
CSSPreloadScanner should not depend on HTMLToken
Comment 1 Adam Barth 2013-02-13 13:23:02 PST
Created attachment 188162 [details]
Patch
Comment 2 Eric Seidel (no email) 2013-02-13 13:27:48 PST
Comment on attachment 188162 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=188162&action=review

> Source/WebCore/html/parser/CSSPreloadScanner.cpp:61
> +void CSSPreloadScanner::scan(const LChar* begin, const LChar* end, Vector<OwnPtr<PreloadRequest> >& requests)

This is just a template. :)

> Source/WebCore/html/parser/CSSPreloadScanner.h:44
> +    void scan(const LChar* begin, const LChar* end, Vector<OwnPtr<PreloadRequest> >&);

This isn't currently used, or?
Comment 3 Adam Barth 2013-02-13 13:28:35 PST
(In reply to comment #2)
> (From update of attachment 188162 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=188162&action=review
> 
> > Source/WebCore/html/parser/CSSPreloadScanner.cpp:61
> > +void CSSPreloadScanner::scan(const LChar* begin, const LChar* end, Vector<OwnPtr<PreloadRequest> >& requests)
> 
> This is just a template. :)

Yes.  ;)

> > Source/WebCore/html/parser/CSSPreloadScanner.h:44
> > +    void scan(const LChar* begin, const LChar* end, Vector<OwnPtr<PreloadRequest> >&);
> 
> This isn't currently used, or?

Current unused.  I can add it later when we need it if you like.
Comment 4 WebKit Review Bot 2013-02-13 14:42:08 PST
Comment on attachment 188162 [details]
Patch

Clearing flags on attachment: 188162

Committed r142803: <http://trac.webkit.org/changeset/142803>
Comment 5 WebKit Review Bot 2013-02-13 14:42:12 PST
All reviewed patches have been landed.  Closing bug.